# GMV-LiveLens

./: .env.example  .gitignore  .temp_analyze.py  AUDIT_FINAL_REPORT.md  AUDIT_FINDINGS.md  AUDIT_FIX_REPORT.md  AUDIT_PROJECT_MAP.md  AUDIT_TEST_PLAN.md  Claude_Code_项目全量审计与交付测试_Prompt.md  FULL_CHAIN_TEST_REPORT.md  README.md  SMOKE_TEST_REPORT.md  SYSTEM_REVIEW_REPAIR_ROADMAP.md  package.json  pyproject.toml  requirements.txt  启动GMV公网服务.bat  第1步_启动GMV服务.bat  第2步_启动公网隧道.bat
.claude/: settings.local.json
.deepseek/state/: subagents.v1.json
.github/workflows/: test.yml
.trae/documents/: BUILD_修复执行与代码变更报告.md  DEFINE_项目定义与真实现状报告.md  Edge会话就绪判断与显示窗口修复计划.md  Edge双问题闭环修复与Chrome评估执行计划.md  Edge启动显示隐藏关闭稳定性重构计划.md  Edge四按钮阻塞与隐藏后无法恢复修复计划.md  Edge窗口最大化与前台激活修复计划.md  Edge隐藏与关闭可靠性加固计划.md  GMV-LiveLens_P1修复与最终验收报告_20260508.md  GMV-LiveLens项目全量说明书.md  SHIP_交付报告.md  (+101 more)
backend/: logging_config.py  main.py  models.py
data/: shops.csv  shops.csv.gbk.bak  shops_default.json  shops_name.csv  shops_page_data.json  target.csv  to_date.csv
deploy/: README-public-dashboard.md  env.local-public.example  env.production.example
frontend/: app.js  config.js  core.js  dashboard-public.js  dashboard-shared.js  dashboard.js  debug.js  edge.js  index.html  styles.css  top-bg-demo.html  ux-pro-max-demo.html  yoy-card-placement-demo.html
scripts/: analyze_excel2.py  analyze_excel3.py  check_results.py  ci_check.py  deep_analyze.py  fill_city_codes.py  gbt2260_data.py
tests/: conftest.py  full_test.py  smoke_api.py  smoke_edge.py  test_dashboard_regression.py  test_screen_readonly_hardening.py
(+1361 files in other folders)
