[project]
name = "gmv-livelens"
version = "0.3.0"
requires-python = ">=3.11"

[tool.ruff]
line-length = 120
target-version = "py311"
exclude = [
    ".venv",
    "__pycache__",
    ".idea",
    "data",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
